[gd_scene load_steps=11 format=2]

[ext_resource path="res://inimigos/inimigos_comun/fase_2/arqueiro/side_scroller/arqueiro_SD.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.2658
height = 62.6674

[sub_resource type="Animation" id=2]
resource_name = "atack_animation_left"
tracks/0/type = "value"
tracks/0/path = NodePath("position_projetil:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -71.9999, -7.62939e-006 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "atack_animation_rigth"
tracks/0/type = "value"
tracks/0/path = NodePath("position_projetil:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 65.2499, -4.50001 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "death_animation"

[sub_resource type="Animation" id=5]
resource_name = "idlle_animation"

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 458.672, 89.4893 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 460.922, 96.2393 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 19.9223
height = 67.134

[node name="arqueiro_SD" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite_arqueiro_SD" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="animation_arqueiro_SD" type="AnimationPlayer" parent="."]
anims/atack_animation_left = SubResource( 2 )
anims/atack_animation_rigth = SubResource( 3 )
anims/death_animation = SubResource( 4 )
anims/idlle_animation = SubResource( 5 )

[node name="position_projetil" type="Position2D" parent="."]
position = Vector2( -71.9999, -7.62939e-006 )

[node name="area_atack_left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_atack_left"]
position = Vector2( -517.499, -58.4999 )
shape = SubResource( 6 )

[node name="area_atack_rigth" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_atack_rigth"]
position = Vector2( 524.249, -58.4999 )
shape = SubResource( 7 )

[node name="area_corpo" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_corpo"]
shape = SubResource( 8 )

[node name="delay_atack_stop" type="Timer" parent="."]
wait_time = 2.0
[connection signal="animation_finished" from="animation_arqueiro_SD" to="." method="_on_animation_arqueiro_SD_animation_finished"]
[connection signal="body_entered" from="area_atack_left" to="." method="_on_area_atack_left_body_entered"]
[connection signal="body_exited" from="area_atack_left" to="." method="_on_area_atack_left_body_exited"]
[connection signal="body_entered" from="area_atack_rigth" to="." method="_on_area_atack_rigth_body_entered"]
[connection signal="body_exited" from="area_atack_rigth" to="." method="_on_area_atack_rigth_body_exited"]
[connection signal="body_entered" from="area_corpo" to="." method="_on_area_corpo_body_entered"]
[connection signal="timeout" from="delay_atack_stop" to="." method="_on_delay_atack_stop_timeout"]
